<resources>
    <string name="app_name">Duel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matn_moghararat">مقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیرید
        مقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیریدمقررات برنامه را بپذیرید</string>
    <string name="gavanin">
      \n  قوانین و مقررات :
      \n  حساب کاربری:
      \n  شما برای استفاده از این خدمات باید حداقل 12 سال داشته باشید.
      \n  شما باید یک شخص واقعی باشید.
      \n  حساب های کاربری که با روبات ها یا دیگر روش های ثبت نام خودکار در سامانه تحفه ثبت نام می شوند مجاز شناخته نمی شوند.
      \n  مسولیت حفظ و نگهداری، محرمانه بودن و امنیت حساب کاربری شما بر عهده خود شما خواهد بود. تحفه هیچ مسولیتی در قبال این اطلاعات ندارد.
      \n  شما مسول تمامی محتوا یا فعالیت هایی که تحت حساب کاربری شما مبادله یا انجام می شود خواهید بود
      \n  ( حتی زمانی که این فعالیت ها توسط افرادی به جز شخص شما انجام شود که به حساب کاربری شما دسترسی دارند)
      \n  . شما اجازه ندارید که این خدمات را در راستای اهداف غیر قانونی و یا غیر مجاز استفاده کنید.

      \n  پرداخت و بازپرداخت:

      \n  تمامی پرداخت ها از طریق کلیه کارت های عضو شتاب و در درگاه پرداخت معتبر مانند کافه بازار انجام خواهد شد.
      \n  هزینه خدمات غیر قابل استرداد است و به منظور رعایت مساوات هیچ استثنایی در این زمینه وجود نخواهد داشت.
      \n  تمامی هزینه ها مجزا از مالیات، عوارض یا وظایف اعمال شده توسط مقامات مالیات هستند و مسولیت این موارد بر عهده شما خواهد بود.
      \n  تحفه از لحاظ فنی تمام تلاش خود در ارائه یک محصول استاندارد برای پذیرفته شدن در مارکت های معتبر اپلیکیشن را خواهد کرد،
      \n  اما پذیرفته شدن یا نشدن یک اپلیکیشن در هر یک از مارکت ها را تضمین نخواهد کرد چرا که این مورد طبق قوانین و مفاد مارکت مربوطه ارزیابی می شود.
      \n  لذا تحت هیچ شرایطی هزینه استفاده از خدمات تحفه قابل برگشت نخواهد بود.

      \n  لغو و فسخ حساب کاربری:
      \n  در صورتی که به هر دلیلی قصد لغو حساب کاربری خود را دارید باید از طریق سامانه پشتیبانی درخواست لغو عضویت خود را برای تحفه ارسال کنید
      \n  که در این صورت تمامی محتوایی که شما تا قبل از آن در سامانه تحفه قرار داده اید حذف خواهد شد.
      \n  این اطلاعات بعد از حذف قابل بازیابی نخواهد بود.
      \n  تحفه، به صلاحدید خود، در برخی موارد خاص می تواند حساب کاربری شما را حذف کند یا به حالت تعلیق در آورد.

      \n  تغییرات در خدمات و قیمت ها:
      \n  تحفه می تواند در هر زمان اقدام به تغییر و یا قطع خدمات خود به صورت موقت یا دائم کند.
      \n  هزینه‌های مربوط به این خدمات نیز قابل تغییر است که در این صورت در سامانه قابل رویت خواهد بود.
        - جوایز بازی به صورت رتبه بندی به نفرات برتر مسابقه اهدا خواهد شد که رتبه بندی این افراد در نفرات برتر بسته به لیگ اجرا شده و تعداد اعضا، از ۲۰ درصد تا ۸۰ درصد طبق لیگ و بستگی به لیگ اعضا جایزه دریافت خواهند کرد. که مقدار دقیق آن در قسمت توضیحات مربوط به هر لیگ آورده شده است.


- شرکت در مسابقه در چهارچوب یک گروه و لیگ با حداقل ۱۰ نفر عضو میباشد که تمامی اعضا میبایست مبلغی را چه به صورت نقدی چه انجام برخی روش های دیگر، بلیط ورود را فراهم کنند.

- میزان مبالغ جایزه مسابقات به حساب کاربری داخل بازی واریز میشود که کاربر پس از برنده شدن میتواند میزان جایزه خود را در پروفایل خود دریافت کند که میتوانند به صورت نقدی با وارد کردن مشخصات کارت حساب بانکی خود مبلغ را مستقیما دریافت کنند و یا یا موجود خود به خرید شارژ اعتباری یپردازند.

- حداقل میزان موجودی برای درخواست واریز، ۱۰۰,۰۰۰ ریال میباشد.

- برندگان هر دوره مسابقه دوئل، در انتهای بازی نمایش و در انتهای زمان لیگ به شما لیست و ترتیب کاربران نمایش داده میشود.
    </string>
    <string name="mozo">موضوع:</string>
    <string name="send">ارسال</string>
    <string name="payam">پیام:</string>
    <string name="ersal_nazar">ارسال نظر</string>
    <string name="fail_connect_internet">لطفا از اتصال به اینترنت مطمئن شوید</string>
    <string name="enter_mobile">شماره همراه خود را وارد کنید</string>
    <string name="agree_term">من با قوانین و مقررات این سرویس موافقم</string>
    <string name="code_sent_enter">کد ارسال شده را وارد کنید</string>
    <string name="sent">ارسال</string>
    <string name="change_number">تغییر موبایل</string>
    <string name="check_code">بررسی کد</string>
    <string name="get_code">دریافت کد</string>
    <string name="mablag">مبلغ درخواستی</string>
    <string name="ersal_darkhast">ارسال درخواست</string>
    <string name="paymnet">پرداخت</string>
    <string name="status">وضعیت</string>
    <string name="requestid">شماره درخواست</string>
    <string name="amount">مقدار</string>
    <string name="transaction">تراکنش ها</string>
    <string name="description">توضیحات</string>
    <string name="newPrice">قیمت جدید</string>
    <string name="mojoddi">موجودی</string>
    <string name="gameover" translatable="false">You gameOver</string>
    <string name="gameoverMessage" translatable="false">You can try Now</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="tryAgain">try Agian</string>
    <string name="max_point">بیشترین امتیاز</string>
    <string name="continuea">ادامه دادن</string>
    <string name="name">نام</string>
    <string name="msg_update">با موفقیت اپدیت شد</string>
    <string name="sabtnazar">ثبت نظر</string>
    <string name="badkonak">بازی بادکنیک ها</string>
    <string name="popping_pin">pin</string>
    <string name="score_label">رکورد</string>
    <string name="go_exit">میرم بیرون</string>
    <string name="try_try">دوباره امتحان میکنم</string>
    <string name="play_game">شروع بازی</string>
    <string name="ticket_free">بلیت رایگان</string>
    <string name="coin_free">سکه رایگان</string>
    <string name="selectLeague">انتخاب لیگ</string>
    <string name="loginORregister">شرکت کردن در لیگ یا ورود</string>
    <string name="payment_loading">در حال اتصال درگاه لطفا کمی صبر کنید</string>
</resources>
