<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/show_send_comment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/shape_edittext_border"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/back_comment_close"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgclose"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="#FF0000"
            app:srcCompat="@drawable/ic_close">

        </ImageView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|right"
            android:paddingEnd="16dp"
            android:text="@string/ersal_nazar"

            android:textColor="#000"
            android:textSize="17sp"
            tools:ignore="RtlHardcoded,RtlSymmetry">

        </TextView>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_edittext_border"
        android:gravity="center|right"
        android:hint="@string/mozo"
        android:id="@+id/mozo"

        android:padding="6dp"
        android:textColor="#000"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_edittext_border"
        android:gravity="center|right"
        android:hint="@string/payam"
        android:id="@+id/payam"
        android:minHeight="100dp"
        android:padding="6dp"
        android:textColor="#000"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp"
        android:weightSum="100">

        <Button
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:background="@drawable/shape_btn"
            android:text="@string/send"
            android:textColor="#fff" />
    </LinearLayout>

</LinearLayout>