<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="#fff">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/game2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:background="@color/darck" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_wave_login"
            app:tint="#fff" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/change_number"
            android:id="@+id/changeNumber"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:onClick="changeNumber"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content">

        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/shape_edittext_border"
            android:drawableEnd="@drawable/ic_local_phone"
            android:gravity="center|right"
            android:id="@+id/mobile_edt"
            android:inputType="number"
            android:maxLength="12"
            android:hint="@string/enter_mobile" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/shape_edittext_border"
            android:drawableEnd="@drawable/ic_mail"
            android:gravity="center|right"
            android:padding="6dp"
            android:drawablePadding="4dp"
            android:inputType="number"
            android:visibility="gone"
            android:id="@+id/code_edt"
            android:maxLength="12"
            android:hint="@string/code_sent_enter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:weightSum="1"
            android:id="@+id/linear_m"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:id="@+id/txtGhavanin"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="right|center"
                android:layout_gravity="center"
                android:text="@string/agree_term"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/checkboxGhavanin"
                android:gravity="center"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:onClick="btnlogin"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="8dp"
            android:text="@string/sent"
            android:id="@+id/code_sent"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:background="@drawable/shape_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>