<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/modern_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp">

        <ImageView
            android:id="@+id/pushpin1"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            app:srcCompat="@drawable/pin"
            android:tint="@color/pinColor" />

        <ImageView
            android:id="@+id/pushpin2"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            app:srcCompat="@drawable/pin"
            android:tint="@color/pinColor" />

        <ImageView
            android:id="@+id/pushpin3"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            app:srcCompat="@drawable/pin"
            android:tint="@color/pinColor" />

        <ImageView
            android:id="@+id/pushpin4"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            app:srcCompat="@drawable/pin"
            android:tint="@color/pinColor" />

        <ImageView
            android:id="@+id/pushpin5"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            app:srcCompat="@drawable/pin"
            android:tint="@color/pinColor" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/lightGrey">

        <Button
            android:id="@+id/go_button"
            android:onClick="startGame"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/play_game"
            android:layout_alignParentLeft="true" />

        <LinearLayout
            android:id="@+id/status_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_size"
                android:text="@string/max_point"
                android:id="@+id/max_point"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
            <TextView
                android:id="@+id/score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_label"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:layout_margin="@dimen/text_size"
                android:layout_gravity="center"
                tools:ignore="RelativeOverlap" />


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>